style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --topbar-height: 3rem; /* adjust the value as needed */
}


*{
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

/* html, body {
  height: 100%;
} */

#app {
  background: #0c0c0c;
}

@media screen and (min-width: 780px) {
  #app {
    background-image: url(/images/wallpaper.webp);
    background-repeat: no-repeat;
    background-size: cover;
  }
}

#content {
  scrollbar-color: #c8c8c8 #f5f5f5;
  scrollbar-width: thin;
  padding-top: calc(var(--topbar-height) + 1px);

}

/* typewritter effect */
#typewriter {
  height: 450px !important; /* Set a fixed height for the txtElement */
  overflow-y: scroll; /* Show the scrollbar */
}


#content::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

#content::-webkit-scrollbar-thumb {
  background-color: #c8c8c8;
  border-radius: 10px;
}

#content::-webkit-scrollbar-thumb:hover {
  background-color: #a6a6a6;
}

#content::-webkit-scrollbar-corner {
  background-color: #f5f5f5;
}


/* setting styles for a tag, they are used for javascript links */
a {
  text-decoration: underline;
  color: rgb(63, 120, 255);
}

.animate-pulse {
  animation: pulse 0.6s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}

.red-text{
  color: red;
}

